syntax = "proto3";
package remna;
option go_package = "/remna";

import "google/protobuf/timestamp.proto";

message EmptyRequest{}

message PingResponse{
    string status = 1;
}

message GetUserByUsernameRequest{
    string username = 1;
}

message GetUserByTgIDRequest{
    string tgid = 1;
}

message GetUserByEmailRequest{
    string email = 1;
}

message GetUserUUIDRequest{
    string uuid = 1;
}

message CreateUserRequest{
    string username = 1;
    string email = 2;
    string tgid = 3;
    string plan = 4;
}

message UserResponse{
    string uuid = 1;
    string username = 2;
    string tgid = 3;
    string email = 4;
    repeated string internal_squads = 5;
    google.protobuf.Timestamp expiry_time = 6;
    string sub_url = 7;
    int64 device_limit = 8;
}

message UpdateUserRequest{
    string username = 1;
    string uuid = 2;
    string plan = 3;
}

message MultipleUsersResponse{
    repeated UserResponse users = 1;
}

message HwidResponse{
    string hwid = 1;
    string user_uuid = 2;
    string platform = 3;
    string os_version = 4;
    string device_model = 5;
    string user_agent = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message MultipleHwidResponse{
    repeated HwidResponse devices = 1;
}

message SRHRecordResponse{
    int64 id = 1;
    string user_uuid = 2;
    string request_ip = 3;
    string user_agent = 4;
    google.protobuf.Timestamp requested_at = 5;
}

message SRHHistoryResponse{
    repeated SRHRecordResponse records = 1;
}

service RemnaService{
    rpc PingRemna (EmptyRequest) returns (PingResponse);
    rpc GetUser (GetUserByUsernameRequest) returns (UserResponse);
    rpc CreateUser (CreateUserRequest) returns(UserResponse);
    rpc UpdateUserExpiryTime (UpdateUserRequest) returns(UserResponse);
    rpc GetUsersByTgID (GetUserByTgIDRequest) returns(MultipleUsersResponse);
    rpc GetUsersByEmail (GetUserByEmailRequest) returns(MultipleUsersResponse);
    rpc GetAllUsers (EmptyRequest) returns(MultipleUsersResponse);
    rpc GetUserHwidDevices (GetUserUUIDRequest) returns(MultipleHwidResponse);
    rpc GetSRHHistory (EmptyRequest) returns(SRHHistoryResponse);
    rpc DisableUser (GetUserUUIDRequest) returns(UserResponse);
    rpc EnableUser (GetUserUUIDRequest) returns(UserResponse);
}

